--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
-    <modules>
-        <module>javaCore</module>
-        <module>rpc</module>
-        <module>chopperDemo</module>
-        <module>document</module>
-    </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -16,10 +10,18 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.flyer.cn</groupId>
-    <artifactId>document</artifactId>
+    <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo</name>
     <description>Demo project for Spring Boot</description>
+
+    <modules>
+        <module>javaCore</module>
+        <module>rpc</module>
+        <module>chopperDemo</module>
+        <module>document</module>
+    </modules>
+
 
     <properties>
         <java.version>1.8</java.version>
